re PR debug/31899 (-g and using declaration causing ICE in reference_to_unused)

2007-10-03  Doug Kwan  <dougkwan@google.com>
	Richard Guenther  <rguenther@suse.de>

	PR debug/31899
	* dwarf2out.c (reference_to_unused): Disable sanity checking,
	be conservative instead.

	* g++.dg/debug/using3.C: New testcase.

Co-Authored-By: Richard Guenther <rguenther@suse.de>

From-SVN: r128978